--- a/README.html
+++ b/README.html
@@ -443,6 +443,7 @@ void 0!==arguments[0]&&(br.sequenceConfig=arguments[0]),e=arguments[1]):e=argume
 <h3 id="%E5%AD%97%E6%AE%B5%E5%80%BC%E5%88%97%E8%A1%A8%E7%BB%B4%E6%8A%A4">  <a href="Chapter03/Sec08.html">字段值列表维护</a></h3>
 <h3 id="%E8%A7%A6%E5%8F%91%E5%99%A8%E5%88%9B%E5%BB%BA">  <a href="Chapter03/Sec09.html">触发器创建</a></h3>
 <h3 id="%E8%A1%A8%E6%A0%BC%E4%BE%A6%E5%90%AC">  <a href="Chapter03/Sec10.html">表格侦听</a></h3>
+<h3 id="%E5%90%AF%E7%94%A8%E7%89%88%E6%9C%AC%E8%B7%9F%E8%B8%AA">  <a href="Chapter03/Sec11.html">启用版本跟踪</a></h3>
 <hr>
 <p>  © eIvy Framework 2019.</p>
 
