--- a/README.html
+++ b/README.html
@@ -421,7 +421,7 @@ void 0!==arguments[0]&&(br.sequenceConfig=arguments[0]),e=arguments[1]):e=argume
           : 'default'
     });
   </script>
-<h1 id="eivyframework-%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3">eIvyFramework 使用文档</h1>
+<h1 id="div-styleheight40pxdiv-stylefloatlefteivy-framework-%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3div-div-stylefloatrightimg-width80-height40-srclogopngimgdivdiv"><div style="height:40px"><div style="float:left">eIvy Framework 使用文档</div> <div style="float:right"><img width="80" height="40" src="Logo.png"></img></div></div></h1>
 <p>提供 eIvy Framework 的使用手册与教程</p>
 <h2 id="%E6%A6%82%E8%BF%B0"><a href="Chapter01/Index.html">概述</a></h2>
 <h3 id="%E5%88%9D%E8%A1%B7">  <a href="Chapter01/Sec01.html">初衷</a></h3>
