--- a/README.html
+++ b/README.html
@@ -388,16 +388,16 @@ setting.json 中为 markdown 配置 html 文件自动生成</p>
 </div></code></pre>
 <p>提供 eIvy Framework 的使用手册与教程</p>
 <h2 id="%E6%A6%82%E8%BF%B0"><a href="Chapter01/Index.html">概述</a></h2>
-<h3 id="%E5%88%9D%E8%A1%B7">  <a href="Chapter01/Sec01.html">初衷</a></h3>
-<h3 id="%E5%9F%BA%E6%9C%AC%E6%80%9D%E8%B7%AF">  <a href="Chapter01/Sec02.html">基本思路</a></h3>
-<h3 id="%E6%A0%B8%E5%BF%83%E6%A6%82%E5%BF%B5">  <a href="Chapter01/Sec03.html">核心概念</a></h3>
+<h3 id="%E5%88%9D%E8%A1%B7">  <a href="Chapter01/Idea.html">初衷</a></h3>
+<h3 id="%E5%9F%BA%E6%9C%AC%E6%80%9D%E8%B7%AF">  <a href="Chapter01/BasicSolution.html">基本思路</a></h3>
+<h3 id="%E6%A0%B8%E5%BF%83%E6%A6%82%E5%BF%B5">  <a href="Chapter01/CoreConcepts.html">核心概念</a></h3>
 <h2 id="%E5%AE%89%E8%A3%85"><a href="Chapter02/Index.html">安装</a></h2>
-<h3 id="%E7%8E%AF%E5%A2%83%E5%87%86%E5%A4%87">  <a href="Chapter02/Sec01.html">环境准备</a></h3>
-<h3 id="%E4%B8%8D%E5%90%8C%E7%89%88%E6%9C%AC">  <a href="Chapter02/Sec02.html">不同版本</a></h3>
-<h3 id="%E6%89%8B%E5%8A%A8%E5%AE%89%E8%A3%85">  <a href="Chapter02/Sec03.html">手动安装</a></h3>
-<h3 id="%E5%AE%89%E8%A3%85%E7%A8%8B%E5%BA%8F">  <a href="Chapter02/Sec04.html">安装程序</a></h3>
+<h3 id="%E7%8E%AF%E5%A2%83%E5%87%86%E5%A4%87">  <a href="Chapter02/Prepare.html">环境准备</a></h3>
+<h3 id="%E4%B8%8D%E5%90%8C%E7%89%88%E6%9C%AC">  <a href="Chapter02/Version.html">不同版本</a></h3>
+<h3 id="%E6%89%8B%E5%8A%A8%E5%AE%89%E8%A3%85">  <a href="Chapter02/SetupByMannul.html">手动安装</a></h3>
+<h3 id="%E5%AE%89%E8%A3%85%E7%A8%8B%E5%BA%8F">  <a href="Chapter02/SetupAuto.html">安装程序</a></h3>
 <h2 id="%E6%95%B0%E6%8D%AE%E5%BA%93"><a href="Chapter03/Index.html">数据库</a></h2>
-<h3 id="%E6%95%B0%E6%8D%AE%E5%BA%93%E5%9F%BA%E6%9C%AC%E9%85%8D%E7%BD%AE">  <a href="Chapter03/Sec01.html">数据库基本配置</a></h3>
+<h3 id="%E6%95%B0%E6%8D%AE%E5%BA%93%E5%9F%BA%E6%9C%AC%E9%85%8D%E7%BD%AE">  <a href="Chapter03/DatabaseConfig.html">数据库基本配置</a></h3>
 <h3 id="%E8%A1%A8%E6%A0%BC%E5%88%9B%E5%BB%BA---%E7%94%98">  <a href="Chapter03/Sec02.html">表格创建</a> - 甘</h3>
 <h3 id="%E5%AD%97%E6%AE%B5%E5%88%9B%E5%BB%BA">  <a href="Chapter03/Sec03.html">字段创建</a></h3>
 <h3 id="%E6%95%B0%E6%8D%AE%E5%BA%93%E8%84%9A%E6%9C%AC%E5%88%9B%E5%BB%BA---%E6%9C%B1">  <a href="Chapter03/Sec04.html">数据库脚本创建</a> - 朱</h3>
@@ -439,7 +439,7 @@ setting.json 中为 markdown 配置 html 文件自动生成</p>
 <h2 id="%E6%8A%80%E6%9C%AF%E5%8F%82%E8%80%83"><a href="Chapter10/Index.html">技术参考</a></h2>
 <h3 id="%E5%AD%97%E6%AE%B5%E5%9E%8B">  <a href="Chapter10/Sec01.html">字段型</a></h3>
 <h3 id="%E8%A7%86%E5%9B%BE%E6%A0%87%E7%AD%BE">  <a href="Chapter10/Sec02.html">视图标签</a></h3>
-<h3 id="%E9%A1%B5%E9%9D%A2%E6%A0%87%E7%AD%BE">  <a href="Chapter10/Sec03.html">页面标签</a></h3>
+<h3 id="%E9%A1%B5%E9%9D%A2%E6%A0%87%E7%AD%BE">  <a href="Chapter10/Page.html">页面标签</a></h3>
 <h3 id="%E7%AD%9B%E9%80%89%E5%AD%90%E5%8F%A5%E6%A0%87%E7%AD%BE">  <a href="Chapter10/Sec04.html">筛选子句标签</a></h3>
 <h3 id="%E6%8E%92%E5%BA%8F%E5%AD%90%E5%8F%A5%E6%A0%87%E7%AD%BE">  <a href="Chapter10/Sec05.html">排序子句标签</a></h3>
 <h3 id="%E5%91%BD%E4%BB%A4%E5%8F%82%E8%80%83">  <a href="Chapter10/Sec06.html">命令参考</a></h3>
